2010-05-21 Holger Vogt
 * inpcom.c: bugfix 2936702 correct handling of ternary fcn in numparam

2010-05-15 Holger Vogt
 * inpcom.c: exclude comment lines from stripping EOL comments,
   make ngspice abort if .inc <file> fails.
   subckt.c: exclude *, and .  lines from processing to
   getting rid of ( ) around node lists

2010-05-14 Holger Vogt
 * dllitf.h, cplsetup.c, cmexport.c, int/udnfunc.c, real/udnfunc.c, xspice.c:
   tmalloc patch by R Larice
   vngspice.sln, vngspice.proj: 64 bit support 
   inpcom.c: exclude .control ... .endc lines from fcn inp_bsource_compat   

2010-05-11 Holger Vogt
 * inpcom.c: new fcn inp_fix_gnd_name: 'gnd' replaced by ' 0 ', if delimiters
   are '(' or ' ' or ',' on the left and ')' or ' ' or ',' on the right.
   fcn inp_bsource_compat: 'm={m}' replaced by '     '   

2010-05-10 Holger Vogt
 * subckt.c:1349: fcn finishLine: add e. and h. to net name
   inside i(...).

2010-05-09 Holger Vogt
 * inpcom.c: patch 09/05/10 by Robert
 * spinit.in: add ngbehavior
 * inpptree.c: derivatives for fcns min and max

2010-05-08 Holger Vogt
 * inpcom.c: patch 02/05/10 by Robert: avoid subtraction from a builtin 1.0
 * inpcom.c: update to E, G sources with expressions
 * inpcom.c, line 3707: put expression for dependent resistor in brackets

2010-04-26 Dietmar Warning
 * parser/inpgval.c: correct parsing of integer model parameter given as double 
   (e.g. capmod=3.000e+00)

2010-04-23 Holger Vogt
 * xpressn.c: agauss is no. 20
   main.c, inp.c, inpcom.c, compatmode.h, inpptree.h, ifeval.c, inpptree.c, ptfuncs.c:
   ngspice compatibility mode with various functions

2010-04-11 Dietmar Warning
 * Robert Larice patch to allow new operations in control blocks:
 * examples/new-check-3.sp, new-check-4.sp
 * src/include/fteparse.h, ngspice.h
 * src/frontend/parse*.*, evaluate.c, Makefile.am, src/misc/string.c, stringutil.h

2010-03-25 Dietmar Warning
 * Bill Swartz patch: